...
                    border: Border.all(
                      color: Colors.green[900]!,
                    ),
                  ),
                  child: Center(
                    child: Text(
                      'MASUK',
                      style: TextStyle(
                        color: _isHoveringMasuk
                            ? const Color.fromARGB(255, 68, 91, 75)
                            : Colors.white,
                        fontWeight: FontWeight.bold,
                      ),
...
                          ? Colors.white
                          : const Color.fromARGB(255, 68, 91, 75),
                    ),
                  ),
                  child: Center(
                    child: Text(
                      'DAFTAR',
                      style: TextStyle(
                        color: _isHoveringDaftar
                            ? Colors.white
                            : Colors.green[700],
                        fontWeight: FontWeight.bold,
                      ),
...
