...
                color: Color.fromARGB(255, 68, 91, 75),
              ),
            ),
            const SizedBox(height: 5),

            const Text(
              'Daftar terlebih dahulu untuk melanjutkan',
              style: TextStyle(fontSize: 10, color: Colors.grey),
            ),
            const SizedBox(height: 15),

            // Nama
            _buildTextField('Nama Pengguna', _namaController),
...
                style: const TextStyle(color: Colors.red),
              ),
            const SizedBox(height: 10),

            // Tombol Register
            ElevatedButton(
              key: const Key('Register Button'),
              onPressed: _isLoading ? null : _register,
              style: ElevatedButton.styleFrom(
                backgroundColor: const Color.fromARGB(255, 68, 91, 75),
                minimumSize: const Size(double.infinity, 50),
                shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(30),
...
