...
                children: [
                  Center(
                    child: Image.asset('assets/img/logolagi.png', height: 130),
                  ),
                  const SizedBox(height: 10),
                  const Text(
                    'Masuk',
                    style: TextStyle(
                      fontSize: 24,
                      fontWeight: FontWeight.bold,
                      color: Color.fromARGB(255, 68, 91, 75),
                    ),
                  ),
...
